# bytebuffer

./: CMakeLists.txt  README.md
include/: bytebuffer.h
source/: bytebuffer.c  getters.c  print.c  read.c  resize.c  write.c
tests/: CMakeLists.txt
tests/source/: create_test.c  delete_test.c  getters_test.c  read_test.c  resize_test.c  write_test.c
